frontend/resources/styles/main/partials/modal.scss
.modal-wrapper {
}

.modal-overlay {
  align-items: center;
  background-color: $color-dark-bg;
  display: flex;
  justify-content: center;
  position: fixed;
  height: 100%;
  left: 0;
  top: 0;
  width: 100%;
  z-index: 1000;

  &.transparent {
    background-color: rgba($color-white, 0);
  }
}

.modal,
.generic-modal {
  background-color: $color-white;
  width: 565px;
  display: flex;
  position: relative;

  .close {
    cursor: pointer;
    position: absolute;
    right: 16px;
    top: 16px;
    svg {
      width: 16px;
      height: 16px;
      transform: rotate(45deg);
    }
  }

  .modal-content {
    display: flex;
    flex-grow: 1;
    flex-direction: column;
    padding: 60px 100px;
  }

  .button-row {
    display: flex;
    justify-content: space-between;

    > button {
      font-size: $fs12;
    }
    > button:not(:first-child) {
      margin-left: 25px;
    }
  }
}

// NEW GEN MODALS

.modal-container {
  border-radius: $br-medium;
  display: flex;
  flex-direction: column;
  width: 448px;
  background-color: $color-white;
  max-height: 700px;

  .modal-header {
    align-items: center;
    background-color: $color-white;
    border-radius: 8px 8px 0px 0px;
    color: $color-black;
    display: flex;
    height: 63px;
    justify-content: space-between;
  }

  .modal-header-title {
    display: flex;
    align-items: center;
    font-size: $fs18;
    padding-left: 16px;

    h2 {
      font-size: $fs18;
      font-weight: 400;
      margin: 0;
    }
  }

  .modal-close-button {
    align-items: center;
    cursor: pointer;
    display: flex;
    height: 30px;
    justify-content: center;
    margin-right: 16px;

    svg {
      transform: rotate(45deg);
      width: 16px;
      height: 16px;
    }
  }

  .component-list {
    max-height: 408px;
    overflow-y: scroll;
  }

  .modal-item-element {
    display: flex;
    padding-bottom: 3px;
    margin-left: 10px;
    font-size: $fs14;
    color: $color-info;

    .modal-component-icon {
      margin-right: 16px;
      display: flex;
      justify-content: center;
      align-items: center;
      svg {
        width: 16px;
        height: 16px;
        fill: $color-info;
      }
    }
  }

  .modal-content {
    display: flex;
    flex-direction: column;
    padding: 32px;
    border-top: 1px solid $color-gray-10;
    h3 {
      color: $color-gray-40;
      font-size: $fs16;
      font-weight: 400;
    }
    &.delete-shared {
      padding: 15px 32px;
      .modal-item-element {
        font-size: $fs16;
      }
    }
  }

  .modal-footer {
    display: flex;
    height: 63px;
    padding: 0px 18px;
    border-top: 1px solid $color-gray-10;

    .action-buttons {
      display: flex;
      width: 100%;
      height: 100%;
      justify-content: flex-end;
      // border: 1px solid red;
      align-items: center;

      input {
        margin-bottom: 0px;
      }
    }
  }

  .btn-disabled {
    opacity: 0.5;
  }
}

.change-email-modal {
  h2 {
    font-size: $fs18;
  }

  h3 {
    margin-bottom: 15px;
  }

  .modal-footer .action-buttons {
    justify-content: space-around;
  }

  .fields-container {
    margin-top: 1rem;
  }
}

.confirm-dialog,
.alert-dialog {
  background-color: $color-white;

  p {
    font-size: $fs14;
    color: $color-gray-40;
  }

  .action-buttons {
    display: flex;
    flex-direction: row;
    width: 100%;
    font-size: $fs14;
  }

  .cancel-button {
    border: 1px solid $color-gray-30;
    background: $color-canvas;
    border-radius: 3px;
    padding: 0.5rem 1rem;
    cursor: pointer;
    margin-right: 8px;

    &:hover {
      background: $color-gray-20;
    }
  }

  .accept-button {
    border-radius: 3px;
    cursor: pointer;
    padding: 0.5rem 1rem;

    &.danger {
      background: $color-danger;
      border: 1px solid $color-danger;
      color: $color-white;
      &:hover {
        background: $color-danger-dark;
      }
    }

    &.primary {
      background: $color-primary;
      border: 1px solid $color-primary;
      color: $color-black;

      &:hover {
        background: $color-primary-dark;
      }
    }
  }
}
/* ... */

